k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    argocd.argoproj.io/instance: argo-multi-container-app-k8s
  name: my-frontend-clusterip-service
  namespace: argo-test
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-frontend
  type: ClusterIP
