k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /new-frontend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-frontend-clusterip-service
            port:
              number: 80
